forgot to change dev.tfplan

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -136,5 +136,5 @@ jobs:
           ls -la
           terraform init
           terraform validate
-          terraform apply mgmt.tfplan
+          terraform apply dev.tfplan
 
