--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ crash.log
 # to change depending on the environment.
 #
 *.tfvars
-
+.vscode
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
